# yugitoolbox

./: .gitignore  Configs.py  README.md  __init__.py  archetype.py  card.py  card_db.py  cardrenderer.py  constants.py  customdb.py  deck.py  enums.py  lore.py  masks.py  numbers_eveil.py  omegadb.py  pyproject.toml  requirements.txt  set.py  setup.py  test.py  yugidb.py
.github/workflows/: tests.yml
classes/: Archetype.py  Card.py  CardDB.py  Deck.py  __init__.py
data/: lores.json  sets.bak  sets.txt
res/: .gitignore
resources/: masks.py
sql/: omegadb.sql
src/: __init__.py  archetype.py  card.py  cardbuilder.py  cardrenderer.py  constants.py  deck.py  enums.py  functions.py  omegadb.py  set.py  setup.py  sqlclasses.py  tools.py  util.py  yugidb.py
src/yugitoolbox/: archetype.py  enums.py  set.py  yugidb.py
tests/: test.py
yugitoolbox/: __init__.py  api.py  archetype.py  card.py  carddb.py  cardrenderer.py  constants.py  customdb.py  deck.py  enums.py  masks.py  omegadb.py  set.py  sqlclasses.py  yugidb.py  yugitoolbox.py
yugitoolbox/sql/: customdb.sql
yugitoolbox/tests/: test.py
